Please  do  not write behind the end of line tag so that it is  possible
to   send  a   Changelog   file  to  a  line  printer  directly.  Thanks.

For your entries please follow EXACTLY this style:

_yyyy/mm/dd_[Your Name]
_
___*_filename:
_____-_description
_
___*_filename2, filename3:
_____-_description
_
_
_

                                                     -*-*- END OF LINE -*-*-

  2012/05/03  Nepomuk Otte

   * FADC.cpp
     - modified the digitizing function. If the simulated trace is not long
     enough. It is being wrapped around and the readout starts from the
     beginning of the trace. This should only happen for noise anyways.
   * TraceGenerator.cpp
     - added a warning to the tracegenerator if the simulated trace is to
     short and does not hold all the Cherenkov photons

  2012/04/30  Nepomuk Otte

   * ReadConfig.h,.cpp CameraAndReadout
     - added option NUMBERPEDESTALEVENTSTOSTABILZE 
	This specifies the number of pedestal events that will be simulated
	to stabilize the discriminator
     - added another argument to CameraAndReadout. If the last argument is a 1
	then the pedestal events given with NUMBERPEDESTALEVENTS 
	will be simulated and written to file

   * TriggerTelescopeNextNeighbor.cpp
     - Change the frequency by which information about the discrimanator are output from
	1000 to 10

  2012/03/07  Nepomuk Otte

   * This is CARE after a complete rewrite of the structure
     This became necessary to allow the simulation of hundreds of 
	 telescopes. At the same time a number of new features had been includes

  2011/07/11  Nepomuk Otte

   * config/CARE_VERITAS_AfterUpgrade.cfg config/CARE_VERITAS_NewArray.cfg
     -  Updated QE curves in both configuration. Old Array has the QE curve 
	    agreed in the Montreal meeting. The upgrade QE curve has a peak QE of
		32%, which is what we see in latest measurements

  2011/03/15  Nepomuk Otte

   * config/CARE_VERITAS_BeforeT1Move.cfg